test_suite5/ALAN/test_suite/alan-2022-examples/failing/003890_mutation.alan
source J1 begin integer relax end
